K8S Lite
Much like the image API, make a context specific API for accessing
regions.  Limited to non-Kubernetes for now, but we may consider a
runpod-esque service down the line...
